fixed footer overlap

--- a/assets/style.css
+++ b/assets/style.css
@@ -137,7 +137,7 @@ a:hover {
   background-color: #2d3142;
   color: #fff;
   background: transparent;
-  padding-bottom: 20px;
+  margin-bottom: 45px;
 }
 
 /* FOOTER */
